@@ -172,7 +172,91 @@
                                         <argument>--input</argument>
                                         <argument>${project.build.directory}</argument>
                                         <argument>--name</argument>
-                                        <argument>${project.name}${installer.name.suffix}</argument>
+                                        <argument>${project.name}</argument>
+                                        <argument>--main-class</argument>
+                                        <argument>${main.class}</argument>
+                                        <argument>--main-jar</argument>
+                                        <argument>${project.build.finalName}.jar</argument>
+                                        <argument>--module-path</argument>
+                                        <argument>${project.build.directory}/mods</argument>
+                                        <argument>--add-modules</argument>
+                                        <argument>javafx.base,javafx.controls,javafx.graphics,javafx.fxml,javafx.swing,java.logging,java.net.http,java.base,java.desktop,java.net.http,jdk.crypto.ec</argument>
+                                        <argument>--java-options</argument>
+                                        <argument>-Dfile.encoding=UTF-8</argument>
+                                        <argument>--app-version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--vendor</argument>
+                                        <argument>Medarametla Solutions</argument>
+                                        <argument>--win-menu</argument>
+                                        <argument>--win-shortcut</argument>
+                                        <argument>--icon</argument>
+                                        <argument>src/main/resources/icon.ico</argument>
+                                        <argument>--license-file</argument>
+                                        <argument>src/main/resources/license.txt</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>mac-x86_64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <javafx.platform>mac</javafx.platform>
+                <arch.suffix>-Intel</arch.suffix>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <executions>
+                            <execution>
+                                <id>copy-javafx-mods-mac</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                                    <includeGroupIds>org.openjfx</includeGroupIds>
+                                    <stripVersion>true</stripVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <executions>
+                            <execution>
+                                <id>jpackage-mac-x86_64</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>${java.home}/bin/jpackage</executable>
+                                    <arguments>
+                                        <argument>--type</argument>
+                                        <argument>PKG</argument>
+                                        <argument>--dest</argument>
+                                        <argument>${project.build.directory}/installer</argument>
+                                        <argument>--input</argument>
+                                        <argument>${project.build.directory}</argument>
+                                        <argument>--name</argument>
+                                        <argument>${project.name}</argument>
                                         <argument>--main-class</argument>
                                         <argument>${main.class}</argument>
                                         <argument>--main-jar</argument>
@@ -185,78 +269,10 @@
                                         <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
                                         <argument>Medarametla Solutions</argument>
-                                        <argument>--win-menu</argument>
-                                        <argument>--win-shortcut</argument>
-                                        <argument>--icon</argument>
-                                        <argument>src/main/resources/icon.ico</argument>
-                                        <argument>--license-file</argument>
-                                        <argument>src/main/resources/LICENSE.txt</argument>
-                                        <argument>--java-options</argument>
-                                        <argument>-Dmonivue.log.path=%USERPROFILE%\\monivue-error.log</argument>
-                                        <argument>--java-options</argument>
-                                        <argument>-Dfile.encoding=UTF-8</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>macos-intel</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                    <arch>x86_64</arch>
-                </os>
-            </activation>
-            <properties>
-                <javafx.platform>mac</javafx.platform>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <executions>
-                            <execution>
-                                <id>jpackage-mac-intel</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>${java.home}/bin/jpackage</executable>
-                                    <arguments>
-                                        <argument>--type</argument>
-                                        <argument>pkg</argument>
-                                        <argument>--dest</argument>
-                                        <argument>${project.build.directory}/installer</argument>
-                                        <argument>--input</argument>
-                                        <argument>${project.build.directory}</argument>
-                                        <argument>--name</argument>
-                                        <argument>${project.name}${installer.name.suffix}</argument>
-                                        <argument>--main-class</argument>
-                                        <argument>${main.class}</argument>
-                                        <argument>--main-jar</argument>
-                                        <argument>${project.build.finalName}.jar</argument>
                                         <argument>--icon</argument>
                                         <argument>src/main/resources/icon.icns</argument>
                                         <argument>--license-file</argument>
-                                        <argument>src/main/resources/LICENSE.txt</argument>
-                                        <argument>--app-version</argument>
-                                        <argument>${project.version}</argument>
-                                        <argument>--vendor</argument>
-                                        <argument>Medarametla Solutions</argument>
-                                        <argument>--java-options</argument>
-                                        <argument>-Dfile.encoding=UTF-8</argument>
-                                        <argument>--mac-package-identifier</argument>
-                                        <argument>com.monivue.app</argument>
-                                        <argument>--mac-package-name</argument>
-                                        <argument>Monivue</argument>
+                                        <argument>src/main/resources/license.txt</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
@@ -267,7 +283,7 @@
         </profile>
 
         <profile>
-            <id>macos-arm</id>
+            <id>mac-aarch64</id>
             <activation>
                 <os>
                     <family>mac</family>
@@ -275,17 +291,37 @@
                 </os>
             </activation>
             <properties>
-                <javafx.platform>mac</javafx.platform>
+                <javafx.platform>mac-aarch64</javafx.platform>
+                <arch.suffix>-AppleSilicon</arch.suffix>
             </properties>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <executions>
+                            <execution>
+                                <id>copy-javafx-mods-mac-aarch64</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                                    <includeGroupIds>org.openjfx</includeGroupIds>
+                                    <stripVersion>true</stripVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>jpackage-mac-arm</id>
+                                <id>jpackage-mac-aarch64</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>exec</goal>
@@ -294,31 +330,29 @@
                                     <executable>${java.home}/bin/jpackage</executable>
                                     <arguments>
                                         <argument>--type</argument>
-                                        <argument>pkg</argument>
+                                        <argument>PKG</argument>
                                         <argument>--dest</argument>
                                         <argument>${project.build.directory}/installer</argument>
                                         <argument>--input</argument>
                                         <argument>${project.build.directory}</argument>
                                         <argument>--name</argument>
-                                        <argument>${project.name}${installer.name.suffix}</argument>
+                                        <argument>${project.name}-Asc</argument>
                                         <argument>--main-class</argument>
                                         <argument>${main.class}</argument>
                                         <argument>--main-jar</argument>
                                         <argument>${project.build.finalName}.jar</argument>
-                                        <argument>--icon</argument>
-                                        <argument>src/main/resources/icon.icns</argument>
-                                        <argument>--license-file</argument>
-                                        <argument>src/main/resources/LICENSE.txt</argument>
+                                        <argument>--module-path</argument>
+                                        <argument>${project.build.directory}/mods</argument>
+                                        <argument>--add-modules</argument>
+                                        <argument>javafx.base,javafx.controls,javafx.graphics,javafx.fxml,javafx.swing,java.logging,java.net.http,java.base,java.desktop,java.net.http,jdk.crypto.ec</argument>
                                         <argument>--app-version</argument>
                                         <argument>${project.version}</argument>
                                         <argument>--vendor</argument>
                                         <argument>Medarametla Solutions</argument>
-                                        <argument>--java-options</argument>
-                                        <argument>-Dfile.encoding=UTF-8</argument>
-                                        <argument>--mac-package-identifier</argument>
-                                        <argument>com.monivue.app</argument>
-                                        <argument>--mac-package-name</argument>
-                                        <argument>Monivue</argument>
+                                        <argument>--icon</argument>
+                                        <argument>src/main/resources/icon.icns</argument>
+                                        <argument>--license-file</argument>
+                                        <argument>src/main/resources/license.txt</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
@@ -328,4 +362,4 @@
             </build>
         </profile>
     </profiles>
-</project>
+    </project>
